--- a/locales/zh/nodeDefs.json
+++ b/locales/zh/nodeDefs.json
@@ -26,11 +26,11 @@
       },
       "x_offset": {
         "name": "水平偏移",
-        "tooltip": "水平偏移像素（正数，配合对齐方式使用）"
+        "tooltip": "水平偏移像素，可为负数（配合对齐方式使用）"
       },
       "y_offset": {
         "name": "垂直偏移",
-        "tooltip": "垂直偏移像素（正数，配合对齐方式使用）"
+        "tooltip": "垂直偏移像素，可为负数（配合对齐方式使用）"
       },
       "scale_mode": {
         "name": "缩放模式",
