feat: make background optional and add transparent canvas support
- Change background parameter from required to optional in RC_ImageCompositor

- When no background is provided, create transparent canvas with proper overlay positioning

- Add proper scale calculations when background is missing

- Update localization: change 'Overlay' to 'Foreground' in English and Chinese

--- a/locales/en/nodeDefs.json
+++ b/locales/en/nodeDefs.json
@@ -6,7 +6,7 @@
         "name": "Background"
       },
       "overlay": {
-        "name": "Overlay"
+        "name": "Foreground"
       },
       "x_percent": {
         "name": "X Percentage",
