fix: change '因子' to '系数' in gradient generator tooltip

--- a/locales/zh/nodeDefs.json
+++ b/locales/zh/nodeDefs.json
@@ -290,7 +290,7 @@
       },
       "scale": {
         "name": "缩放",
-        "tooltip": "渐变缩放/缩放因子"
+        "tooltip": "渐变缩放/缩放系数"
       },
       "reference_image": {
         "name": "参考图片",
