feat: enhance JS UI internationalization for gradient generator
- Implement proper i18n support in rc_gradient_ui.js

- Add UI text translations for gradient controls

- Update both en and zh locales with UI text mappings

--- a/locales/en/nodeDefs.json
+++ b/locales/en/nodeDefs.json
@@ -297,5 +297,23 @@
         "tooltip": "Reference image for size (used when size_mode is from_image)"
       }
     }
+  },
+  "Pos": {
+    "name": "Pos"
+  },
+  "Color": {
+    "name": "Color"
+  },
+  "Alpha": {
+    "name": "Alpha"
+  },
+  "Delete": {
+    "name": "Delete"
+  },
+  "Reverse": {
+    "name": "Reverse"
+  },
+  "Presets": {
+    "name": "Presets"
   }
 }
